--- a/cmake/config.cmake.in
+++ b/cmake/config.cmake.in
@@ -3,5 +3,6 @@ set(${CMAKE_FIND_PACKAGE_NAME}_CONFIG ${CMAKE_CURRENT_LIST_FILE})
 find_package_handle_standard_args(@PROJECT_NAME@ CONFIG_MODE)
 
 if(NOT TARGET raxpp::raxpp)
-  include("${CMAKE_CURRENT_LIST_DIR}/raxppTargets.cmake")
+    find_package(rax REQUIRED)
+    include("${CMAKE_CURRENT_LIST_DIR}/raxppTargets.cmake")
 endif()
